// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть DashboardMySalesWidget 1`] = `
<DashboardWidget
  className="DashboardMySalesWidget"
>
  <DashboardWidgetHeader
    title="Объявления"
    total="123 шт."
    url="linkCabinet/sales/?"
  />
  <DashboardWidgetHorizontalBar
    animation={true}
    chartData={
      Array [
        Object {
          "active": Object {
            "backgroundColor": "#ABDDA4",
            "count": 242,
          },
          "banned": Object {
            "backgroundColor": "#F87E7E",
            "count": 0,
          },
          "inactive": Object {
            "backgroundColor": "#B0E8F0",
            "count": 364,
          },
          "withServices": Object {
            "backgroundColor": "#FEE08B",
            "count": 0,
          },
        },
      ]
    }
    className="DashboardMySalesWidget__chart"
  />
  <ul
    className="DashboardMySalesWidget__legend"
  >
    <li
      className="DashboardMySalesWidget__legend-item"
      key="active"
    >
      <div
        className="DashboardMySalesWidget__dot"
        style={
          Object {
            "backgroundColor": "#ABDDA4",
          }
        }
      />
      <Link
        className="DashboardMySalesWidget__legend-link"
        metrika="offers_widget,click,active"
        url="linkCabinet/sales/?status=active"
      >
        <span
          className="DashboardMySalesWidget__legend-text"
        >
          Активные
        </span>
        <div
          className="DashboardMySalesWidget__count"
        >
          242
           шт.
        </div>
      </Link>
    </li>
    <li
      className="DashboardMySalesWidget__legend-item"
      key="inactive"
    >
      <div
        className="DashboardMySalesWidget__dot"
        style={
          Object {
            "backgroundColor": "#B0E8F0",
          }
        }
      />
      <Link
        className="DashboardMySalesWidget__legend-link"
        metrika="offers_widget,click,inactive"
        url="linkCabinet/sales/?status=inactive"
      >
        <span
          className="DashboardMySalesWidget__legend-text"
        >
          Неактивные
        </span>
        <div
          className="DashboardMySalesWidget__count"
        >
          364
           шт.
        </div>
      </Link>
    </li>
    <li
      className="DashboardMySalesWidget__legend-item"
      key="banned"
    >
      <div
        className="DashboardMySalesWidget__dot"
        style={
          Object {
            "backgroundColor": "#F87E7E",
          }
        }
      />
      <Link
        className="DashboardMySalesWidget__legend-link"
        metrika="offers_widget,click,banned"
        url="linkCabinet/sales/?status=banned"
      >
        <span
          className="DashboardMySalesWidget__legend-text"
        >
          Заблокированные
        </span>
        <div
          className="DashboardMySalesWidget__count"
        >
          0
           шт.
        </div>
      </Link>
    </li>
    <li
      className="DashboardMySalesWidget__legend-item"
      key="withServices"
    >
      <div
        className="DashboardMySalesWidget__dot"
        style={
          Object {
            "backgroundColor": "#FEE08B",
          }
        }
      />
      <Link
        className="DashboardMySalesWidget__legend-link"
        metrika="offers_widget,click,has_vas"
        url="linkCabinet/sales/?service=all_sale_fresh&service=all_sale_badge&service=all_sale_premium&service=all_sale_special&service=package_turbo"
      >
        <span
          className="DashboardMySalesWidget__legend-text"
        >
          С услугами
        </span>
        <div
          className="DashboardMySalesWidget__count"
        >
          0
           шт.
        </div>
      </Link>
    </li>
  </ul>
  <DashboardWidgetButton
    text="Список объявлений"
    url="linkCabinet/sales/?"
  />
</DashboardWidget>
`;

exports[`должен вернуть DashboardMySalesWidget, если нет офферов 1`] = `
<DashboardWidget
  className="DashboardMySalesWidget"
>
  <DashboardWidgetHeader
    title="Объявления"
    url="linkCabinet/sales/?"
  />
  <div
    className="DashboardMySalesWidget__placeholder"
  >
    <p
      className="DashboardMySalesWidget__paragraph DashboardMySalesWidget__paragraph_wide"
    >
      Для добавления объявления заполните форму
    </p>
    <div
      className="DashboardMySalesWidget__paragraph"
    />
    <p
      className="DashboardMySalesWidget__paragraph"
    >
      или
    </p>
    <p
      className="DashboardMySalesWidget__paragraph DashboardMySalesWidget__paragraph_left"
    >
      если у вас много объявлений, вы можете загружать их с помощью XML-файлов
    </p>
    <Link
      className="DashboardMySalesWidget__paragraph"
      metrika="offers_widget,click,create_feed"
      url="linkCabinet/feeds/?"
    >
      <Button
        color="white"
        size="xl"
        type="button"
        width="default"
      >
        Настроить выгрузку XML
      </Button>
    </Link>
  </div>
</DashboardWidget>
`;

exports[`должен вернуть DashboardMySalesWidget, если нет офферов и есть clientsUrl 1`] = `
<DashboardWidget
  className="DashboardMySalesWidget"
>
  <DashboardWidgetHeader
    title="Объявления"
    url="linkCabinet/sales/?"
  />
  <div
    className="DashboardMySalesWidget__placeholder"
  >
    <p
      className="DashboardMySalesWidget__paragraph DashboardMySalesWidget__paragraph_wide"
    >
      Для добавления объявления заполните форму
    </p>
    <div
      className="DashboardMySalesWidget__paragraph"
    >
      <div
        className="DashboardMySalesWidget__dropdown"
      >
        <Dropdown
          autoClose={true}
          closeOnInside={true}
          disabled={true}
          switcher={
            <Button
              color="blue"
              disabled={true}
              metrika="offers_widget,click,add_offers"
              size="xl"
              type="button"
              width="default"
            >
              Добавить объявление
              <IconSvg
                id="svgID"
                size="24"
              />
            </Button>
          }
          type="click"
        >
          <div
            className="DashboardMySalesWidget__menu"
          >
            <Link
              className="DashboardMySalesWidget__menu-item"
              key="cars_new"
              target="_blank"
              url="/cars/new/add/"
            >
              Легковые новые
            </Link>
            <Link
              className="DashboardMySalesWidget__menu-item"
              key="cars_used"
              target="_blank"
              url="/cars/used/add/"
            >
              Легковые б/у
            </Link>
          </div>
        </Dropdown>
      </div>
    </div>
    <p
      className="DashboardMySalesWidget__paragraph"
    >
      или
    </p>
    <p
      className="DashboardMySalesWidget__paragraph DashboardMySalesWidget__paragraph_left"
    >
      если у вас много объявлений, вы можете загружать их с помощью XML-файлов
    </p>
    <Link
      className="DashboardMySalesWidget__paragraph"
      metrika="offers_widget,click,create_feed"
      url="linkCabinet/feeds/?"
    >
      <Button
        color="white"
        size="xl"
        type="button"
        width="default"
      >
        Настроить выгрузку XML
      </Button>
    </Link>
  </div>
</DashboardWidget>
`;

exports[`должен вернуть DashboardMySalesWidget, если нет офферов, canAddOffers и clientsUrl 1`] = `
<DashboardWidget
  className="DashboardMySalesWidget"
>
  <DashboardWidgetHeader
    title="Объявления"
    url="linkCabinet/sales/?"
  />
  <div
    className="DashboardMySalesWidget__placeholder"
  >
    <p
      className="DashboardMySalesWidget__paragraph DashboardMySalesWidget__paragraph_wide"
    >
      Для добавления объявления заполните форму
    </p>
    <div
      className="DashboardMySalesWidget__paragraph"
    />
    <p
      className="DashboardMySalesWidget__paragraph"
    >
      или
    </p>
    <p
      className="DashboardMySalesWidget__paragraph DashboardMySalesWidget__paragraph_left"
    >
      если у вас много объявлений, вы можете загружать их с помощью XML-файлов
    </p>
    <Link
      className="DashboardMySalesWidget__paragraph"
      metrika="offers_widget,click,create_feed"
      url="linkCabinet/feeds/?"
    >
      <Button
        color="white"
        size="xl"
        type="button"
        width="default"
      >
        Настроить выгрузку XML
      </Button>
    </Link>
  </div>
</DashboardWidget>
`;
